# Openflow-OPCUA-Suite

./: .gitignore  LICENSE  README.md
openflow-opcua-get-data/: README.md  build.sh  pyproject.toml
openflow-opcua-get-data/scripts/: builder.py
openflow-opcua-get-data/src/processors/: opcua_get_data.py
openflow-opcua-get-node-list/: README.md  build.sh  pyproject.toml
openflow-opcua-get-node-list/src/processors/: __init__.py  opcua_get_node_list.py
openflow-opcua-subscribe/: README.md  build.sh  constraints.txt  pyproject.toml
openflow-opcua-subscribe/src/processors/: opcua_subscribe.py
