[build-system]
requires = ["hatchling", "hatch-datavolo-nar"]
build-backend = "hatchling.build"


[project]
name = "openflow-opcua-subscribe"
dynamic = ["version"]
description = "Openflow (NiFi) Python source processor that subscribes to node value changes outside of deadband and return (JSON/CSV/XML) or writes directly to Snowflake."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Kevin Mahnke" }]
keywords = ["nifi", "openflow", "opcua", "iiot", "snowflake", "python", "source"]
dependencies = [
  "asyncua>=1.0.0,<2.0.0",
  "cryptography>=41,<43",
  "cffi>=1.15,<2.0",
  "pycparser>=2.21,<3.0"
]

[tool.hatch.version]
path = "src/processors/__about__.py"


[tool.hatch.build.targets.nar]
# Point to the code folder that contains your processor(s)
packages = ["src/processors"]

# All dependencies that should be vendored inside the NAR
dependencies = [
  "pandas>=2.2,<2.3",
  "pyarrow>=16,<18",
  "snowflake-connector-python>=3.10,<4",
]
entry_points = [
  "net.ksmcloud.opcua.OPCUASubscribe=processors.opcua_subscribe:OPCUASubscribe"
]

